# MineMind

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  docker-compose.yml  generate_const_data.py  protocol_reader.py  pyproject.toml
mc_protocol/: __init__.py  archtest.py  client.py  constants.py  dispatcher.py  enums.py  event_loop.py  main.py  schemas.py  utils.py
mc_protocol/mc_types/: __init__.py  array.py  base.py  boolean.py  float.py  int.py  nbt.py  position.py  string.py  uuid.py  varint.py  varnum.py
mc_protocol/packets/v765/inbound/: configuration.py  login.py  play.py  status.py
mc_protocol/packets/v765/outbound/: status.py
mc_protocol/protocols/: base.py  game.py  protocol_events.py  utils.py
mc_protocol/protocols/v765/: bot.py  configuration.py  constants.py  entity.py  game.py  handshake.py  physics.py  player.py  server.py  utils.py  world.py
mc_protocol/protocols/v765/inbound/: configuration.py  login.py  play.py  status.py
mc_protocol/protocols/v765/outbound/: configuration.py  handshaking.py  login.py  play.py  status.py
mc_protocol/states/: enums.py  events.py
minemind/: dispatcher.py
minemind/mc_types/: array.py  nbt.py
minemind/protocols/future/inbound/: play.py
minemind/protocols/v765/: bot.py  configuration.py  constants.py  entity.py  inventory.py  physics.py  world.py
minemind/protocols/v765/inbound/: play.py
minemind/protocols/v765/minecraft-data/: items.json
